# Dolphin-VC

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  deps.py  errors.py  main.py  middleware.py  types.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/routers/: applications.py  auth.py  entities.py  health.py  jobs.py  memos.py  operations.py  opportunities.py  orgs.py  search.py  theses.py
backend/app/schemas/: __init__.py  admin.py  application.py  auth.py  common.py  entities.py  founder.py  job.py  memo.py  opportunity.py  org.py  search.py  thesis.py
backend/app/services/: __init__.py  applications.py  auth.py  extraction.py  founders.py  ingestion.py  jobs.py  memo.py  object_store.py  opportunities.py  pipeline.py  search.py  security.py  seeding.py  utils.py
backend/app/services/connectors/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  tavily.py
backend/app/services/llm/: __init__.py  gateway.py
backend/app/workers/: __init__.py  arq_app.py  tasks.py
backend/scripts/: __init__.py  export_openapi.py  init.sql  run_tests.sh  seed.py  smoke_test.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: test_openapi.py  test_route_auth.py
backend/tests/integration/: test_application_pipeline.py  test_auth.py  test_decision_guard.py  test_founder_persistence.py  test_ingestion.py
backend/tests/resilience/: test_llm_fallback.py
backend/tests/security/: test_ssrf.py  test_tenant_isolation.py
backend/tests/unit/: test_connectors.py  test_extraction.py  test_founder_score.py  test_recommendation.py  test_trust.py
(+22 files in other folders)
